--- a/rootdir/etc/init.angler.rc
+++ b/rootdir/etc/init.angler.rc
@@ -528,7 +528,7 @@ on property:apexd.status=ready
 
 # Set the dark splash on init
 on init
-    start vendor.darkboot
+    start vendor.theme_set
 
 # Set the dark boot flag on dark mode (UiModeManager.MODE_NIGHT_YES == 2).
 #on property:persist.sys.theme=2
